// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIToggle should have a hidden label as aria-label if provided and flagged 1`] = `
<div
  className=""
>
  <div
    aria-label="This is a toggle"
    className="xui-toggle xui-toggle-medium"
    role="radiogroup"
  />
</div>
`;

exports[`XUIToggle should have a qaHook if provided 1`] = `
<div
  className=""
>
  <div
    className="xui-toggle xui-toggle-medium"
    data-automationid="cheese-and-crackers"
    role="radiogroup"
  />
</div>
`;

exports[`XUIToggle should have a visible label if provided 1`] = `
<div
  className=""
>
  <span
    className="xui-text-label xui-fieldlabel-layout"
    id="xui-testCheckboxId"
  >
    This is a toggle
  </span>
  <div
    aria-labelledby="xui-testCheckboxId"
    className="xui-toggle xui-toggle-medium"
    role="radiogroup"
  />
</div>
`;

exports[`XUIToggle should have the fieldLayout class and a custom labelID, if provided 1`] = `
<div
  className="xui-field-layout"
>
  <span
    className="xui-text-label xui-fieldlabel-layout"
    id="testing123"
  >
    This is a toggle
  </span>
  <div
    aria-labelledby="testing123"
    className="xui-toggle xui-toggle-medium"
    role="radiogroup"
  />
</div>
`;
